external-crates/move/crates/move-compiler/tests/move_check/unit_test/attribute_location_invalid@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E10004]: invalid usage of known attribute
  ┌─ tests/move_check/unit_test/attribute_location_invalid.move:1:3
  │
1 │ #[test]
  │   ^^^^
  │   │
  │   Attribute 'test' is not expected with a module
  │   Expected to be used with one of the following: function

error[E10004]: invalid usage of known attribute
  ┌─ tests/move_check/unit_test/attribute_location_invalid.move:5:7
  │
5 │     #[expected_failure(abort_code = 0)]
  │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │       │
  │       Attribute 'expected_failure' is not expected with a struct
  │       Expected to be used with one of the following: function

warning[W10007]: issue with attribute value
  ┌─ tests/move_check/unit_test/attribute_location_invalid.move:5:24
  │
5 │     #[expected_failure(abort_code = 0)]
  │                        ^^^^^^^^^^^^^^
  │                        │            │
  │                        │            Replace value with a constant from expected module or add 'location=...'
  │                        WARNING: passes for an abort from any module
